testdata/golden/sema/valid/block_expr_basic.sg
// scenario: block expressions with explicit ret
fn test_block_expr() -> int {
    let x: int = {
        let a: int = 10;
        let b: int = 20;
        ret a + b;
    };
    return x;
}

fn test_nested_block_expr() -> int {
    // Block expression inside block expression
    let y: int = {
        let outer: int = 5;
        ret {
            let inner: int = outer * 2;
            ret inner;
        };
    };
    return y;
}
