testdata/golden/sema/invalid/mut_ref_local_conflict.sg
// scenario: shared borrow conflicts with active exclusive borrow
fn main() -> nothing {
    let mut x: int = 1;
    let r: &mut int = &mut x;
    let s: &int = &x;
    return;
}
